// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should be rendered correctly 1`] = `
<fieldset
  className="uui-vertical-direction root container"
>
  <label
    className="container root size-18 checkbox-color-blue"
  >
    <input
      aria-checked={false}
      checked={false}
      className="uui-checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="uui-input-label"
      role="label"
    >
      Test1
    </span>
  </label>
  <label
    className="container root size-18 checkbox-color-blue"
  >
    <input
      aria-checked={false}
      checked={false}
      className="uui-checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="uui-input-label"
      role="label"
    >
      Test2
    </span>
  </label>
</fieldset>
`;

exports[`CheckboxGroup should be rendered correctly with props 1`] = `
<fieldset
  className="uui-horizontal-direction root container"
>
  <label
    className="container root size-18 checkbox-color-blue uui-disabled"
  >
    <input
      aria-checked={false}
      checked={false}
      className="uui-checkbox"
      disabled={true}
      onChange={null}
      type="checkbox"
    />
    <span
      className="uui-input-label"
      role="label"
    >
      Test1
    </span>
  </label>
  <label
    className="container root size-18 checkbox-color-blue uui-disabled"
  >
    <input
      aria-checked={false}
      checked={false}
      className="uui-checkbox"
      disabled={true}
      onChange={null}
      type="checkbox"
    />
    <span
      className="uui-input-label"
      role="label"
    >
      Test2
    </span>
  </label>
</fieldset>
`;
